cmake_minimum_required(VERSION 3.21)
project(Sets_Kudashov)

set(CMAKE_CXX_STANDARD 20)

add_executable(Sets_Kudashov Sets_Kudashov.cpp SetLab1_12_Kudashov.cpp SetLab1_12_Kudashov.h SetLab3_Kudashov.cpp SetLab3_Kudashov.h SetLab4_Kudashov.cpp SetLab4_Kudashov.h SetLab5_Kudashov.cpp SetLab5_Kudashov.h)
